<resources>
    <string name="app_name">Top Football</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live_matches">Live Matches</string>
    <string name="matches">Matches</string>
    <string name="view_all">View all</string>
    <string name="results_of_today_s_matches">Results of today\'s matches</string>
    <string name="team">Team</string>
    <string name="laliga">LaLiga</string>
    <string name="premier_league">Premier League</string>
    <string name="ligue_1">Ligue 1</string>
    <string name="serie_a">Serie A</string>
    <string name="standings">Standings</string>
    <string name="top_player">Top Player</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="mp">MP</string>
    <string name="l">L</string>
    <string name="d">D</string>
    <string name="w">W</string>
    <string name="pts">Pts</string>
    <string name="all">All</string>
    <string name="message_not_playing">The game is not playing now</string>
    <string name="message_check_internet">Check your internet connection</string>
    <string name="pused">PAUSED</string>
    <string name="in_play">IN_PLAY</string>
    <string name="timed">TIMED</string>
    <string name="finished">FINISHED</string>
    <string name="no_team">Your desired team was \n not found</string>
    <string name="search">Enter your team name</string>
    <string name="serir_a">Serie A</string>
    <string name="player_information">Player Information</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="name">Name:</string>
    <string name="nationality">Nationality:</string>
    <string name="position">Position:</string>
    <string name="the_last_fifteen_games">The last fifteen games</string>

</resources>