<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/swipeRefresh"
    android:layout_height="match_parent"
    tools:context=".ui.standings.ViewAllStandingFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp20" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standings"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp20"
                    android:textStyle="bold"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewLeague"
            android:layout_width="205dp"
            android:layout_height="134dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewNameLeague"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLeague" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/pink_400"
                    android:paddingStart="12dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/mainText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/team"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/team_p"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/pts"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/matches_l"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/l"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/team_p"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/matches_d"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/d"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/matches_l"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/matches_w"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/w"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/matches_d"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/matches_p"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/mp"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/matches_w"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmerViewStandings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/textViewMatches"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLiveMatches"
                    tools:ignore="MissingConstraints">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">



                        <include layout="@layout/shimmer_layout_standings" />

                        <include layout="@layout/shimmer_layout_standings" />

                        <include layout="@layout/shimmer_layout_standings" />

                        <include layout="@layout/shimmer_layout_standings" />

                        <include layout="@layout/shimmer_layout_standings" />
                        <include layout="@layout/shimmer_layout_standings" />
                        <include layout="@layout/shimmer_layout_standings" />
                        <include layout="@layout/shimmer_layout_standings" />
                        <include layout="@layout/shimmer_layout_standings" />
                        <include layout="@layout/shimmer_layout_standings" />
                        <include layout="@layout/shimmer_layout_standings" />
                        <include layout="@layout/shimmer_layout_standings" />
                        <include layout="@layout/shimmer_layout_standings" />
                        <include layout="@layout/shimmer_layout_standings" />

                    </LinearLayout>
                </com.facebook.shimmer.ShimmerFrameLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerStandings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>




</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>