<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/swipeRefresh"
    android:layout_height="match_parent"
    tools:context=".ui.topPlayer.PlayerInformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/player_information"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp20"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView3"
                android:layout_width="137dp"
                android:layout_height="277dp"
                android:layout_marginStart="24dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="69dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewNationality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/nationality"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textViewDateOfBirth"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDateOfBirth" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewPlayerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="80dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewDateOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textViewPlayerName"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPlayerName" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textViewPlayerName"
                    app:layout_constraintTop_toTopOf="@+id/textViewPlayerName" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dateOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"

                    app:layout_constraintStart_toEndOf="@+id/textViewDateOfBirth"
                    app:layout_constraintTop_toTopOf="@+id/textViewDateOfBirth" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/position"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textViewNationality"
                    app:layout_constraintTop_toBottomOf="@+id/textViewNationality" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/nationality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textViewNationality"
                    app:layout_constraintTop_toTopOf="@+id/textViewNationality" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textViewPosition"
                    app:layout_constraintTop_toTopOf="@+id/textViewPosition" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/the_last_fifteen_games"
            android:textColor="@color/black"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playerMatcheRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:listitem="@layout/card_matchs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewGame" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerViewMatches"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMatches"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/shimmer_layout_matches" />

                <include layout="@layout/shimmer_layout_matches" />

                <include layout="@layout/shimmer_layout_matches" />

                <include layout="@layout/shimmer_layout_matches" />

                <include layout="@layout/shimmer_layout_matches" />
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

    </LinearLayout>



</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>