<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="bol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp20"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLiveMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/live_matches"
            android:textColor="@color/black"

            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/notPlaying"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="16dp"
            android:visibility="gone"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView"
                    android:layout_width="wrap_content"

                    android:layout_height="160dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/stadium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/message_not_playing"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.8" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView2"
                    android:layout_width="106dp"
                    android:layout_height="69dp"
                    android:src="@drawable/football_player"
                    app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerViewLiveMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewMatches"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLiveMatches"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <include layout="@layout/shimmer_layout_live_matches" />

                <include layout="@layout/shimmer_layout_live_matches" />

                <include layout="@layout/shimmer_layout_live_matches" />

                <include layout="@layout/shimmer_layout_live_matches" />

                <include layout="@layout/shimmer_layout_live_matches" />

                <include layout="@layout/shimmer_layout_live_matches" />

                <include layout="@layout/shimmer_layout_live_matches" />
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerLiveMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewLiveMatches"
            app:layout_constraintTop_toBottomOf="@+id/textViewLiveMatches"
            tools:listitem="@layout/card_live_matches" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewMatches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/matches"
                android:textColor="@color/black"
                android:textSize="@dimen/sp20"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/recyclerLiveMatches"
                app:layout_constraintTop_toBottomOf="@+id/recyclerLiveMatches" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewSeeAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/view_all"
                android:textColor="@color/pink_400"
                android:textSize="@dimen/sp15"
                app:layout_constraintBottom_toBottomOf="@+id/textViewMatches"
                app:layout_constraintEnd_toEndOf="@+id/recyclerMatches"
                app:layout_constraintTop_toTopOf="@+id/textViewMatches" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewMatches"
            app:layout_constraintTop_toBottomOf="@+id/textViewMatches"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/card_matchs" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerViewMatches"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMatches"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/shimmer_layout_matches" />

                <include layout="@layout/shimmer_layout_matches" />

                <include layout="@layout/shimmer_layout_matches" />

                <include layout="@layout/shimmer_layout_matches" />

                <include layout="@layout/shimmer_layout_matches" />

                <include layout="@layout/shimmer_layout_matches" />

                <include layout="@layout/shimmer_layout_matches" />
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>


    </LinearLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>